# burrito-artifact

./: .gitignore  LICENSE  README.md  requirements.txt  run.sh
burrito/: README.md  arith.rkt  array.rkt  benchmarks.rkt  cfir.rkt  cin.rkt  compile.rkt  cpp-codegen.rkt  cpp-lang.rkt  cpp-utils.rkt  example.rkt  expr.rkt  format.rkt  index.rkt  infer.rkt  iterator.rkt  kernel.rkt  lattice.rkt  main.rkt  seq.rkt  temp.rkt
graph/: parse_file.py  scatter_plot.py
io_coo/: CMakeLists.txt  io_coo.cpp  parse.h  types.h
pyburrito/: CMakeLists.txt  README.md  burrito.cpp  runtime.h  unfused.h
scripts/: README.md  partition_testing.py  paths.py  run_gen_partition.sh  run_partition.sh  suitesparse_benchmarks.py  temp.txt  test_coo_hstack_coo_coo.py  test_coo_hstack_csr_csr.py  test_coo_slice_1d_csr.py  test_coo_split_cv.py  test_coo_vstack_coo_coo.py  test_coo_vstack_csr_csr.py  test_csr_hstack_coo_coo.py  test_csr_hstack_csr_csr.py  test_csr_slice_1d_csr.py  test_csr_slice_1d_csr_mul_csr.py  test_csr_split_cv.py  test_csr_vstack_csr_csr.py  test_cv_collapse_coo.py  test_cv_collapse_csr_mul_cv.py  test_dv_sum_vstack_csr_csr_mul_dv.py  tester.py  utils.py
suitesparse/: download_suitesparse_reals.sh  suitesparse_stats.csv  unzip_suitesparse.sh
